# Nyx-Module-Collection-1

./: CMakeLists.txt  README.md
cmake/: CompileGLSL.cmake  KPackage.cmake
docs/: doxygen.cfg
shaders/: CMakeLists.txt
shaders/glsl/: CMakeLists.txt
shaders/glsl/compute/: CMakeLists.txt
shaders/glsl/compute/binarize/: CMakeLists.txt  binarize.comp.glsl
shaders/glsl/compute/connected_components/: CMakeLists.txt  cc_boundary_analysis.comp.glsl  cc_global.comp.glsl  cc_local.comp.glsl
shaders/glsl/includes/: Nyx.h
shaders/glsl/render/: CMakeLists.txt
shaders/glsl/render/blit/: CMakeLists.txt  blit.frag.glsl
shaders/glsl/render/draw/: CMakeLists.txt  draw.frag.glsl
shaders/glsl/render/graph_draw_model/: CMakeLists.txt  draw_model.frag.glsl  draw_model.vert.glsl
shaders/glsl/render/graph_draw_sprite/: CMakeLists.txt  draw_sprite.frag.glsl  draw_sprite.vert.glsl
shaders/glsl/render/graph_draw_texture/: CMakeLists.txt  draw_tex2d.frag.glsl  draw_tex2d.vert.glsl  draw_text2d.nyx
shaders/glsl/render/layer_images/: CMakeLists.txt  layer.frag  layer.vert
shaders/glsl/render/test/: CMakeLists.txt  test.frag
shaders/glsl/render/test_subpass/: CMakeLists.txt  color_depth_output.frag.glsl
src/: CMakeLists.txt
src/NyxCamera/: CMakeLists.txt  NyxCamera.cpp  NyxCamera.h  Test.cpp
src/NyxDatabase/: CMakeLists.txt  NyxDatabase.cpp  NyxDatabase.h  Test.cpp  converted_kitty.h  sample_database.json
src/NyxDebug/: CMakeLists.txt  Debug.cpp  Debug.h  Test.cpp
src/NyxDrawModel/: CMakeLists.txt  NyxDrawModel.cpp  NyxDrawModel.h  draw_3d.h
src/NyxDrawTex2D/: CMakeLists.txt  NyxDrawTex2D.cpp  NyxDrawTex2D.h  draw_tex2d.h
src/NyxDummyPlayer/: CMakeLists.txt  NyxDummyPlayer.cpp  NyxDummyPlayer.h  Test.cpp
src/NyxEndDraw/: CMakeLists.txt  NyxEndDraw.cpp  NyxEndDraw.h  Test.cpp
src/NyxGPUBarrier/: CMakeLists.txt  NyxGPUBarrier.cpp  NyxGPUBarrier.h  Test.cpp
src/NyxImageChooser/: CMakeLists.txt  ImageChooser.cpp  ImageChooser.h
src/NyxImageConverter/: CMakeLists.txt  ImageConverter.cpp  ImageConverter.h
src/NyxStartDraw/: CMakeLists.txt  NyxStartDraw.cpp  NyxStartDraw.h  Test.cpp
src/NyxVkgImageConverter/: CMakeLists.txt  ImageConverter.cpp  ImageConverter.h
src/NyxWindow/: CMakeLists.txt  Test.cpp  Window.cpp  Window.h  shader.h
src/Vulkan/: CMakeLists.txt  Test.cpp  Vulkan.cpp  Vulkan.h
src/VulkanDebug/: CMakeLists.txt  Test.cpp  Vulkan.cpp  Vulkan.h
src/VulkanImageConverter/: CMakeLists.txt  ImageConverter.cpp  ImageConverter.h  Test.cpp
src/VulkanWindow/: CMakeLists.txt  Test.cpp  Window.cpp  Window.h
src/compute/: CMakeLists.txt
src/compute/NyxBinarize/: CMakeLists.txt  NyxBinarize.cpp  NyxBinarize.h  Test.cpp  binarize.h
src/compute/NyxConnectedComponents/: CMakeLists.txt  NyxConnectedComponents.cpp  NyxConnectedComponents.h  Test.cpp  cc_boundary_analysis.h  cc_global.h  cc_local.h
src/compute/configs/: binarize.json  connected_components.json
src/rendering/: CMakeLists.txt
src/rendering/NyxDatabase/: CMakeLists.txt  NyxDatabase.cpp  NyxDatabase.h  Test.cpp  sample_database.json
src/rendering/NyxDrawBlit/: CMakeLists.txt  NyxDrawBlit.cpp  NyxDrawBlit.h  NyxDrawModel_bak.cpp  blit.h
src/rendering/NyxDrawModel/: CMakeLists.txt  NyxDrawModel.cpp  NyxDrawModel.h  draw_model.h
src/rendering/NyxDrawSprite/: CMakeLists.txt  NyxDrawSprite.cpp  NyxDrawSprite.h  Test.cpp  draw_sprite.h
src/rendering/NyxDrawTex2D/: CMakeLists.txt  NyxDrawTex2D.cpp  NyxDrawTex2D.h  NyxDrawTex2D_bak.cpp  NyxDrawTex2D_bak.h  draw_tex2d.h
src/rendering/NyxDrawText2D/: CMakeLists.txt  NyxDrawText2D.cpp  NyxDrawText2D.h  draw_text2D.h
src/rendering/NyxStartDraw/: CMakeLists.txt  NyxStartDraw.cpp  NyxStartDraw.h  Test.cpp
src/rendering/configs/: draw_blit_sample.json  draw_model_sample.json  draw_text_sample.json  draw_texture_sample.json  drawing_sample.json  multiple_subpass.json  sprite_draw_sample.json
src/sample_configs/: drawing_sample.json  texture_draw_sample.json
src/templates/: NyxDrawModule.h  NyxImageProcessingModule.h  NyxModule.h
src/utility/: CMakeLists.txt
src/utility/NyxCamera/: CMakeLists.txt  NyxCamera.cpp  NyxCamera.h  Test.cpp
src/utility/NyxDebug/: CMakeLists.txt  Debug.cpp  Debug.h  Test.cpp
src/utility/NyxDummyPlayer/: CMakeLists.txt  NyxDummyPlayer.cpp  NyxDummyPlayer.h  Test.cpp
src/utility/NyxGPUBarrier/: CMakeLists.txt  NyxGPUBarrier.cpp  NyxGPUBarrier.h  Test.cpp
src/utility/NyxImageChooser/: CMakeLists.txt  ImageChooser.cpp  ImageChooser.h
src/utility/NyxImageCombiner/: CMakeLists.txt  ImageCombiner.cpp  ImageCombiner.h  layer_images.h
src/utility/NyxImageConverter/: CMakeLists.txt  ImageConverter.cpp  ImageConverter.h  Test.cpp
src/utility/NyxWindow/: CMakeLists.txt  Test.cpp  Window.cpp  Window.h
