SET(CMAKE_SHARED_LIBRARY_PREFIX "" )

ADD_SUBDIRECTORY( NyxCamera         ) 
ADD_SUBDIRECTORY( NyxDatabase       ) 
ADD_SUBDIRECTORY( NyxDebug          ) 
ADD_SUBDIRECTORY( NyxDrawImage      )
ADD_SUBDIRECTORY( NyxDrawModel      )
ADD_SUBDIRECTORY( NyxDummyPlayer    )
ADD_SUBDIRECTORY( NyxImageChooser   ) 
ADD_SUBDIRECTORY( NyxImageConverter )
ADD_SUBDIRECTORY( NyxStartDraw      )
ADD_SUBDIRECTORY( NyxWindow         ) 
