SET( CMAKE_SHARED_LIBRARY_PREFIX "" )

ADD_SUBDIRECTORY( NyxCamera         ) 
ADD_SUBDIRECTORY( NyxDatabase       ) 
ADD_SUBDIRECTORY( NyxDebug          ) 
ADD_SUBDIRECTORY( NyxDrawTex2D      )
ADD_SUBDIRECTORY( NyxDrawModel      )
ADD_SUBDIRECTORY( NyxDummyPlayer    )
ADD_SUBDIRECTORY( NyxGPUBarrier     )
ADD_SUBDIRECTORY( NyxImageChooser   )
ADD_SUBDIRECTORY( NyxImageConverter )
ADD_SUBDIRECTORY( NyxStartDraw      )
ADD_SUBDIRECTORY( NyxWindow         )
