ADD_SUBDIRECTORY( NyxCamera         ) 
ADD_SUBDIRECTORY( NyxDebug          ) 
ADD_SUBDIRECTORY( NyxDummyPlayer    )
ADD_SUBDIRECTORY( NyxGPUBarrier     )
ADD_SUBDIRECTORY( NyxImageChooser   )
ADD_SUBDIRECTORY( NyxImageCombiner  )
ADD_SUBDIRECTORY( NyxImageConverter )
ADD_SUBDIRECTORY( NyxWindow         )